--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="about">
             <h2>About Me</h2>
             <div class="about-content">
-                <p>Hi, I'm <strong>Aaditya Suresh</strong> a B.Tech student at Amal Jyothi College of Engineering. Outside of academics, I actively participate in sports such as football and swimming. This website was developed as part of an academic project to showcase my skills and ongoing learning.</p>
+                <p>Hi, I'm <b>Aaditya Suresh</b> a B.Tech student at Amal Jyothi College of Engineering. Outside of academics, I actively participate in sports such as football and swimming. This website was developed as part of an academic project to showcase my skills and ongoing learning.</p>
             </div>
         </section>
 
